CloudAlpacas/salesforce/main/default/objects/SDO_Analytics_Survey_Question__c/SDO_Analytics_Survey_Question__c.object-meta.xml
<CustomObject>
    <description>Shadow object for SurveyQuestion. Stores demo CSAT survey question data for Service Insights Cases CSAT dashboard. Feeds ssot__SurveyQuestion__dlm via a SalesforceDotCom data stream in Data Cloud.</description>
    <label>SDO Analytics Survey Question</label>
    <nameField>
        <displayFormat>SQ-{00000}</displayFormat>
        <label>SDO Analytics Survey Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDO Analytics Survey Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>