CloudAlpacas/salesforce/main/default/objects/SDO_Analytics_Survey_Question__c/fields/Question_Name__c.field-meta.xml
<CustomField>
    <fullName>Question_Name__c</fullName>
    <label>Question Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>