CloudAlpacas/salesforce/main/default/objects/SDO_Analytics_Survey_Question__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <label>Question Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rating</fullName>
                <default>true</default>
                <label>Rating</label>
            </value>
            <value>
                <fullName>CSAT</fullName>
            </value>
            <value>
                <fullName>NPS</fullName>
            </value>
            <value>
                <fullName>FreeText</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>