CloudAlpacas/salesforce/main/default/objects/SDO_Analytics_Survey_Question__c/fields/Survey_Question_Id__c.field-meta.xml
<CustomField>
    <fullName>Survey_Question_Id__c</fullName>
    <description>DMO primary key. Maps to ssot__Id__c on ssot__SurveyQuestion__dlm.</description>
    <externalId>true</externalId>
    <label>Survey Question Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>